Fixes the overflowing of thumbnails

--- a/wp-content/themes/multunus/sass/custom/_home.scss
+++ b/wp-content/themes/multunus/sass/custom/_home.scss
@@ -207,13 +207,12 @@
     .nav-tabs {
       border-bottom: 0;
       li.active {
-        border: 1px solid #BD1F3A;
+        border-bottom: 2px solid #BD1F3A;
       }
     }
     .nav-tabs > li {
       padding-left: 0;
       padding-right: 0;
-      margin-right: 10px;
       margin-bottom: 1px;
       text-align: center;
       a {
